--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 </tbody>
 
 
-
+<!-- 
 <div id="leadership">
 <tbody><tr>
 <td width="100%" valign="middle">
@@ -627,9 +627,9 @@
 </td>
 </tr>
 </tbody>
-</div>
+</div> -->
 
-<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+<!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
       <td width="15%">
         <img src="./images/SCSE_GSC_LOGO.png" width="200" height="200">
@@ -642,13 +642,13 @@
           <li> Organize talks, seminars, and gatherings more than 10 times (<EM>e.g.</EM>,
               <a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">PhD Student Lecture Series</a>),
               which have gained over 6,300 video views on <a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">Youtube</a>.<br></li>
-<!--          <br>-->
+
           <li> Connect and invite various scholars for academic talks:
-<!--          <ul>--><br>
+<br>
                &nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">PhD Student Lecture Series (SLS)</a>: CCDS (SCSE) PhD Students, AI Singapore (AISG) PhD Fellows<br>
               &nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">Graduate Chat Series</a>: NTU CCDS (SCSE) Outstanding PhD Thesis Awardees<br>
               &nbsp&nbsp&nbsp&nbsp&nbsp Invited Talk Series: NTU Predidential Postdoctoral Fellows, NTU Nanyang Assistant Professors, <EM>etc</EM>.
-<!--          </ul>-->
+
            <li> Manage and promote CCDS (SCSE) social media publicity (<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos/">Youtube (@SCSE-GSC)</a>,
           <a href="https://www.instagram.com/ntu.scse.gsc/">Instagram (@ntu.scse.gsc)</a>, <a href="https://x.com/SCSE_GSC">Twitter (@SCSE_GSC)</a>, Wechat (@NTU SCSE PhD), <EM>etc</EM>.),
           which has linked and served more than 320 NTU CCDS (SCSE) PhDs. <br></li>
@@ -656,10 +656,10 @@
       </li></td>
     </tr>
    </tbody>
-</table>
+</table> -->
 
 
-<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+<!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
       <td width="15%">
         <img src="./images/SCUT_SSE.jpg" width="200" height="140">
@@ -675,10 +675,10 @@
       </li></td>
     </tr>
    </tbody>
-</table>
+</table> -->
 
 
-<tbody><tr>
+<!-- <tbody><tr>
         <td width="100%" valign="middle">
           <h2>Personal Interests</h2>
           <div style="line-height:25px">
@@ -686,14 +686,36 @@
               <strong>Running and Working Out</strong>: I enjoy running and often participate in 10km+ level races including Singapore Marathon 2023.
               I regularly work out in the gym.
               <br>
-               <!-- <strong>Military Chess (A Chinese cooperative and tactical game)</strong>：My most playing chess game during my high school. -->
-              <!-- <br> -->
+               <strong>Military Chess (A Chinese cooperative and tactical game)</strong>：My most playing chess game during my high school.
+              <br>
               <strong>Billiards, Archery, Rock Climbing, Texas Hold'em</strong>
               <p></p>
           </li></div>
         </td>
       </tr>
+</tbody> -->
+
+
+<tbody><tr>
+  <td width="100%" valign="middle">
+    <h2>Other Experiences</h2>
+    <div style="line-height:25px">
+    <p></p>
+    <li> Director of Publicity Committee & Member of Academic Committee, NTU CCDS (SCSE) Graduate Student Club (2021 - 2024): <a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">PhD Student Lecture Series (SLS)</a>,
+     <a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">Graduate Chat Series</a> (<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos/">Youtube (@SCSE-GSC)</a>,
+     <a href="https://www.instagram.com/ntu.scse.gsc/">Instagram (@ntu.scse.gsc)</a>, <a href="https://x.com/SCSE_GSC">Twitter (@SCSE_GSC)</a>, Welcome to follow :)<br>
+    <li> Director of Information & News Committee, SCUT SSE Student Union (2015 - 2018) <br></li>
+    <li> Summar Voluntary Teaching in Middle Schools, Yunfu City, Guangdong (2016 - 2017, one of the most important experiences in life) <br></li>
+        <p></p>
+    </li></div>
+  </td>
+</tr>
 </tbody>
+
+
+
+
+
 
 
 </table>
