--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
      <a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">Graduate Chat Series</a> (<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos/">Youtube (@SCSE-GSC)</a>,
      <a href="https://www.instagram.com/ntu.scse.gsc/">Instagram (@ntu.scse.gsc)</a>, <a href="https://x.com/SCSE_GSC">Twitter (@SCSE_GSC)</a>, Welcome to follow :)<br>
     <li> Director of Information & News Committee, SCUT SSE Student Union (2015 - 2018) <br></li>
-    <li> Summar Voluntary Teaching in Middle Schools, Yunfu City, Guangdong (2016 - 2017, one of the most important experiences in life) <br></li>
+    <li> Summer Voluntary Teaching in Middle Schools, Yunfu City, Guangdong (2016 - 2017, one of the most important experiences in life) <br></li>
         <p></p>
     </li></div>
   </td>
