--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <img class="intro-image no-print" src="./images/me.png" width="240" height="280" alt="Picture of me.">
 <section id="wenjie-yin" class="intro-text">
 <h1>Haocong Rao</h1>
-    <p><strong>PhD Candidate, AISG PhD Fellow</strong></p>
+    <p><strong>PhD, AISG PhD Fellow</strong></p>
     <p><strong>CCDS, NTU</strong></p>
 
 <div class="intro-contact">
@@ -98,16 +98,15 @@
 <strong>
 <h2 id="about-me">About me</h2>
 <p>
- I am Haocong Rao (饶浩聪), a final-year PhD candidate supported by
-   <a href="https://aisingapore.org/research/phd-fellowship-programme/" target=“_blank”>AI Singapore (AISG) PhD Fellowship</a> and supervised by <a href="https://dr.ntu.edu.sg/cris/rp/rp00084" target=“_blank”>Prof. Chunyan Miao</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/" target=“_blank”>Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>),
-    at the <a href="https://www.ntu.edu.sg/lily" target=“_blank”>LILY Research Centre</a> and College of Computing and Data Science (CCDS), Nanyang Technological University (NTU), Singapore.
-      Prior to joining NTU, I was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science,
-      where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm" target=“_blank”>Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm" target=“_blank”>Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN" target=“_blank”>Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/" target=“_blank”>Prof. Victor C.M. Leung</a> (<em>FIEEE, FRSC, FEIC, FCAE</em>).
-      I obtained my B.Eng. degree with Outstanding Thesis Award from South China University of Technology (SCUT).
+ Haocong Rao (饶浩聪) obtained his PhD from Nanyang Technological University, Singapore, supported by
+   <a href="https://aisingapore.org/research/phd-fellowship-programme/" target=“_blank”>AI Singapore (AISG) PhD Fellowship</a>. His PhD supervisors are <a href="https://dr.ntu.edu.sg/cris/rp/rp00084" target=“_blank”>Prof. Chunyan Miao</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/" target=“_blank”>Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>).
+      Prior to joining NTU, he was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science,
+      where his supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm" target=“_blank”>Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm" target=“_blank”>Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN" target=“_blank”>Prof. Bin Hu </a> (<em>FIEEE</em>), and <a href="https://ece.ubc.ca/victor-leung/" target=“_blank”>Prof. Victor C.M. Leung</a> (<em>FIEEE, FRSC, FEIC, FCAE</em>).
+      He earned his B.Eng. degree with Outstanding Thesis Award from South China University of Technology (SCUT).
 </p>
 
 <p>
-  My broad research interests include 3D Skeleton Based Person Re-Identification (SRID), 3D Signal Processing, Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, AI for Healthcare). In 2020, our team initiated  <a href="https://arxiv.org/pdf/2401.15296">the <em>first</em> series </a> of deep learning based SRID research, 
+  Haocong's research interests include 3D Skeleton Based Person Re-Identification (SRID), 3D Signal Processing, Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, AI for Healthcare). In 2020, the team he collaborated with initiated  <a href="https://arxiv.org/pdf/2401.15296">the <em>first</em> series </a> of deep learning based SRID research, 
   with a focus on developing more efficient, safer (<em>e.g.</em>, appearance-privacy-protected), and robust human identification algorithms tailored for resource-constraint applications and advanced 3D spatial intelligence.
 </p>
 <!--      <em><stronghuge><font color="#a82e2e">I am on the 2024-2025 academic job market. </font></stronghuge></em> <br>-->
@@ -116,6 +115,9 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
+          <li> <strongsmall>[2025/06]</strongsmall> &nbsp;&nbsp;<smalll>We are organizing
+              <a href="http://www.cloudcom2025.org/cfp">The 16th IEEE International Conference on Cloud Computing Technology and Science </a> @<EM>IEEE CloudCom 2025</EM> (conjunction with <EM>IEEE Transactions on Cloud Computing & The Journal of Cloud Computing by Springer</EM>), now calling for papers!
+         </smalll><br></li>
           <li> <strongsmall>[2025/02]</strongsmall> &nbsp;&nbsp;<smalll>Our survey paper "Recognizing Identities From Human Skeletons: A Survey on 3D Skeleton Based Person Re-Identification" is updated and released!</smalll><br></li>
           <li> <strongsmall>[2025/01]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper  "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is accepted by <em><u>Neurocomputing</u> [IF: 5.5]</em>!</smalll><br></li>
           <li> <strongsmall>[2024/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>AAAI 2025</u></em>!</smalll><br></li>
