--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
 <strong>
 <h2 id="about-me">About me</h2>
 <p>
- Haocong Rao (饶浩聪) obtained his PhD from Nanyang Technological University, Singapore, supported by
-   <a href="https://aisingapore.org/research/phd-fellowship-programme/" target=“_blank”>AI Singapore (AISG) PhD Fellowship</a>. His PhD supervisors are <a href="https://dr.ntu.edu.sg/cris/rp/rp00084" target=“_blank”>Prof. Chunyan Miao</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/" target=“_blank”>Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>).
+ Haocong Rao (饶浩聪) obtained his PhD with <a href="https://aisingapore.org/research/phd-fellowship-programme/" target=“_blank”>AI Singapore (AISG) Research PhD Fellowship Award</a> at Nanyang Technological University, Singapore. His PhD supervisors are <a href="https://dr.ntu.edu.sg/cris/rp/rp00084" target=“_blank”>Prof. Chunyan Miao</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/" target=“_blank”>Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>).
       Prior to joining NTU, he was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science,
       where his supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm" target=“_blank”>Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm" target=“_blank”>Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN" target=“_blank”>Prof. Bin Hu </a> (<em>FIEEE</em>), and <a href="https://ece.ubc.ca/victor-leung/" target=“_blank”>Prof. Victor C.M. Leung</a> (<em>FIEEE, FRSC, FEIC, FCAE</em>).
       He earned his B.Eng. degree with Outstanding Thesis Award from South China University of Technology (SCUT).
@@ -139,7 +138,7 @@
           <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI </em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is selected as <em><strong style="color: red;">Featured Article (2022 October Issue) of TPAMI</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Recognized as <strong>Top Reviewer (3%)</strong> and <strong>Distinguished Program Committee (PC) Member</strong> of <em>IJCAI! </em> </smalll><br></li>
           <li> <strongsmall>[2022/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IJCAI 2022</u> (Oral)</em>!</smalll><br></li>
-            <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <em><strong style="color: red;">AI Singapore (AISG) PhD Fellowship</strong> (Top PhD Scholarship in Singapore)</em>!</smalll><br></li>
+            <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <em><strong style="color: red;">AI Singapore (AISG) Research PhD Fellowship Award</strong> (Including Top PhD Scholarship in Singapore)</em>!</smalll><br></li>
             <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Transactions on Multimedia (TMM)</u> [IF: 8.2]</em>!</smalll><br></li>
           <li> <strongsmall>[2021/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>ACMMM 2021</u></em>!</smalll><br></li>
             <li> <strongsmall>[2021/06]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</u> [IF: 24.3]</em>!</smalll><br></li>
@@ -582,11 +581,11 @@
               the Second Xiangya Hospital, Shenzhen People’s Hospital, etc.
               <br>
               <br>
-              <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
+              <li> <stronghuge><STRONG>AI Singapore (AISG) Research PhD Fellowship Award</STRONG> (Including Top PhD Scholarship in SG), 2022-2025</stronghuge><br></li>
               <li> <STRONG>Outstanding Reviewer</STRONG> of IJCAI (Top 3% Reviewer), 2022<br></li>
               <li> <stronghuge><STRONG>Distinguished PC Member</STRONG> of IJCAI, 2022</stronghuge><br></li>
               <li> <stronghuge> <STRONG>One ESI Highly Cited Paper & TPAMI Featured Article</STRONG> (2022 October Issue)</stronghuge><br></li>
-              <li> <stronghuge><STRONG>AI Singapore (AISG) PhD Fellowship</STRONG> (Top PhD Scholarship in SG), 2022-2025</stronghuge><br></li>
+              <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
               <li> <stronghuge><STRONG>Dean's Research Excellence Scholarship (Special Award)</STRONG> of SIAT, 2020</stronghuge><br></li>
               <li> <stronghuge><STRONG>IEEE Healthcom Best Paper Award</STRONG>, 2020</stronghuge><br></li>
               <li> <stronghuge><STRONG>Outstanding Undergraduate Thesis Award</STRONG> of SCUT, 2019</stronghuge> <br></li>
