--- a/index.html
+++ b/index.html
@@ -607,6 +607,7 @@
           <div style="line-height:25px">
           <p></p>
           <li> <stronghuge><STRONG>"Exploring Skeleton-Based AI Models for Person Re-Identification and Interdisciplinary Research"</STRONG>, Invited by <EM> Department of Computer Science and Technology, <u>Nanjing University</u> </EM>, China<br></li>
+          <li> <stronghuge><STRONG>"Human Skeleton Based Person Re-Identification and Interdisciplinary Research"</STRONG>, Invited by <EM> School of Artificial Intelligence, <u>Shanghai Jiao Tong University</u> </EM>, China<br></li>
               <li> <stronghuge><STRONG><a href="https://youtu.be/1QcU5oobJxM?si=eFTmGs7nPn6ilcK2" target=“_blank”>"Advancing Skeleton-Based AI Innovations in Person Re-Identification and Beyond"</STRONG></a>, Invited by <EM> Information Hub - Artificial Intelligence Thrust, <u>Hong Kong University of Science and Technology (Guangzhou)</u> </EM>, China<br></li>
               <li> <stronghuge><STRONG>"Pioneering AI Innovations in Skeleton-Based Person Re-Identification"</STRONG>, Invited by <EM>Institute of Artificial Intelligence, <u>Xiamen University</u></EM>, China<br></li>
             <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/" target=“_blank”>the National AI Stragtegy 2.0</a>"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore<br></li>
