--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 <strong>
 <h2 id="about-me">About me</h2>
 <p>
- Haocong Rao (饶浩聪) obtained his PhD with <a href="https://aisingapore.org/research/phd-fellowship-programme/" target=“_blank”>AI Singapore (AISG) Research PhD Fellowship Award</a> at Nanyang Technological University, Singapore. His PhD supervisors are <a href="https://dr.ntu.edu.sg/cris/rp/rp00084" target=“_blank”>Prof. Chunyan Miao</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/" target=“_blank”>Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>).
+ Haocong Rao (饶浩聪) obtained his PhD degree with <a href="https://aisingapore.org/research/phd-fellowship-programme/" target=“_blank”>AI Singapore (AISG) Research PhD Award</a> at Nanyang Technological University in 2025. His PhD supervisors are <a href="https://dr.ntu.edu.sg/cris/rp/rp00084" target=“_blank”>Prof. Chunyan Miao</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/" target=“_blank”>Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>).
       Prior to joining NTU, he was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science,
       where his supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm" target=“_blank”>Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm" target=“_blank”>Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN" target=“_blank”>Prof. Bin Hu </a> (<em>FIEEE</em>), and <a href="https://ece.ubc.ca/victor-leung/" target=“_blank”>Prof. Victor C.M. Leung</a> (<em>FIEEE, FRSC, FEIC, FCAE</em>).
-      He earned his B.Eng. degree with Outstanding Thesis Award from South China University of Technology (SCUT).
+      He received his B.Eng. degree with Outstanding Thesis Award from South China University of Technology (SCUT).
 </p>
 
 <p>
-  Haocong's research interests include 3D Skeleton Based Person Re-Identification (SRID), 3D Signal Processing, Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, AI for Healthcare). In 2020, the team he collaborated with initiated  <a href="https://arxiv.org/pdf/2401.15296">the <em>first</em> series </a> of deep learning based SRID research, 
+  Haocong's research interests include Human Skeleton Based Pattern Recognition, Resource-Efficient AI for Healthcare Applications, 3D Signal Processing, Self-Supervised/Unsupervised learning, AI4S. In 2020, the team he collaborated with initiated  <a href="https://arxiv.org/pdf/2401.15296">the <em>first</em> series </a> of deep learning based skeleton-based person re-ID research, 
   with a focus on developing more efficient, safer (<em>e.g.</em>, appearance-privacy-protected), and robust human identification algorithms tailored for resource-constraint applications and advanced 3D spatial intelligence.
 </p>
 <!--      <em><stronghuge><font color="#a82e2e">I am on the 2024-2025 academic job market. </font></stronghuge></em> <br>-->
@@ -114,6 +114,7 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
+           <li> <strongsmall>[2025/08]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Signal Processing Letters</u> [IF: 3.9]</em>!</smalll><br></li>
           <li> <strongsmall>[2025/06]</strongsmall> &nbsp;&nbsp;<smalll>We are organizing
               <a href="http://www.cloudcom2025.org/cfp">The 16th IEEE International Conference on Cloud Computing Technology and Science </a> @<EM>IEEE CloudCom 2025</EM> (conjunction with <EM>IEEE Transactions on Cloud Computing & The Journal of Cloud Computing by Springer</EM>), now calling for papers!
          </smalll><br></li>
@@ -131,7 +132,7 @@
             <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Outstanding Contribution Award</strong> of <em>European Alliance for Innovation
 (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</em>.</smalll><br></li>
             <li> <strongsmall>[2023/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>International Journal of Computer Vision (IJCV)</u> [IF: 19.5]</em>!</smalll><br></li>
-            <li> <strongsmall>[2023/03]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI [IF: 24.3]</em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is recognized as <em><strong style="color: red;">ESI Highly Cited Paper</strong></em>!</smalll><br></li>
+            <li> <strongsmall>[2023/03]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI </em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is recognized as <em><strong style="color: red;">ESI Highly Cited Paper</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2023/02]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>CVPR 2023</u></em>!</smalll><br></li>
 <!--            <li> <strongsmall>[2022/12]</strongsmall> &nbsp;&nbsp;<smalll>Invited to serve as a Program Committee member of <em>IJCAI 2023</em>!</smalll><br></li>-->
             <li> <strongsmall>[2022/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Signal Processing Letters</u> [IF: 3.9]</em>!</smalll><br></li>
@@ -529,7 +530,6 @@
       </p>
       <li> <STRONG>Organizing Committee (Publication Chair)</STRONG> of <a href="http://www.cloudcom2025.org/index">the 16th IEEE International Conference on Cloud Computing Technology and Science </a> @<EM>IEEE CloudCom 2025 </EM><br></li>
       <li> <STRONG>Program Committee (PC) Member </STRONG> of <EM>IJCAI</EM> 2025, <EM>IJCAI</EM> 2024, <EM>IJCAI</EM> 2023, <EM>IJCAI</EM> 2022 <br></li>
-      <li> <STRONG>Editorial Board Member </STRONG> of <EM>Frontiers in Computational Neuroscience</EM> journal</li>
       <li> Co-Organizer/Cooperator and PC Member of
           <a href="https://ijcai-aiaa-2024.org/">the 4th AI for Ageless Aging Workshop</a> @<EM>IJCAI 2024</EM><br></li>
       <li> Co-Organizer/Cooperator and PC Member of
@@ -568,11 +568,12 @@
           <h2>Selective Projects &amp; Awards &amp; Honors </h2>
           <div style="line-height:25px">
           <p></p>
-              <li> <stronghuge><STRONG><u>Participator</u></STRONG> of 1 National Key Research and Development Program of China, and 2 general programs of National Natural Science Foundation of China. (2018 to 2021)</li>
-          <li> <stronghuge><STRONG><u>Project Lead</u></STRONG> of AI Singapore PhD Research Project (of National Research Foundation, Singapore) (2022 to 2025): <EM>“Research and Application of AI for Skeleton-Based Person Re-Identification”</EM></li>
+                  <li> <stronghuge><STRONG><u>Project Lead</u></STRONG> of AI Singapore PhD Research Project (of National Research Foundation, Singapore) (2022 to 2025): <EM>“Research and Application of AI for Skeleton-Based Person Re-Identification”</EM></li>
+                    <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Alibaba-NTU Joint Research Institute Project (2022 to 2025)</li>
+                    <li> <stronghuge><STRONG><u>Participator</u></STRONG> of 1 National Key Research and Development Program of China, and 2 general programs of National Natural Science Foundation of China. (2018 to 2021)</li>
             <li> <stronghuge><STRONG><u>Participator</u></STRONG> of the National Science and Technology Innovation Project (2018 to 2020): <EM>“Research and Development of Non-Invasive Gait * System”.</EM></li>
               <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Shenzhen Sustainable Development of Science and Technology Project (2021): <EM>“Clinical Application and Research on Gait and Multi-Modal Analysis Based Elderly Fall and Protection System”.</EM></li>
-                <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Alibaba-NTU Joint Research Institute Project (2022 to 2025)</li>
+
               <br>
               The developed 4D Depth Video Based Gait Recognition & Emotion Prediction System and the Swarm Intelligence Computing and Multi-Sensor Based Sleep Monitoring System 
               have been applied to various universities and
@@ -607,9 +608,10 @@
           <div style="line-height:25px">
           <p></p>
           <li> <stronghuge><STRONG>"Exploring Skeleton-Based AI Models for Person Re-Identification and Interdisciplinary Research"</STRONG>, Invited by <EM> Department of Computer Science and Technology, <u>Nanjing University</u> </EM>, China<br></li>
-          <li> <stronghuge><STRONG>"Human Skeleton Based Person Re-Identification and Interdisciplinary Research"</STRONG>, Invited by <EM> School of Artificial Intelligence, <u>Shanghai Jiao Tong University</u> </EM>, China<br></li>
-              <li> <stronghuge><STRONG><a href="https://youtu.be/1QcU5oobJxM?si=eFTmGs7nPn6ilcK2" target=“_blank”>"Advancing Skeleton-Based AI Innovations in Person Re-Identification and Beyond"</STRONG></a>, Invited by <EM> Information Hub - Artificial Intelligence Thrust, <u>Hong Kong University of Science and Technology (Guangzhou)</u> </EM>, China<br></li>
-              <li> <stronghuge><STRONG>"Pioneering AI Innovations in Skeleton-Based Person Re-Identification"</STRONG>, Invited by <EM>Institute of Artificial Intelligence, <u>Xiamen University</u></EM>, China<br></li>
+          <li> <stronghuge>Invited by <EM> School of Artificial Intelligence, <u>Shanghai Jiao Tong University</u> </EM>, China<br></li> 
+                      <li> <stronghuge>Invited by <EM> <u>Joint SDU-NTU Centre for Artificial Intelligence Research (C-FAIR)</u> </EM>, China<br></li>
+            <li> <stronghuge> Invited by <EM> Artificial Intelligence Thrust, Information Hub, <u>Hong Kong University of Science and Technology (Guangzhou)</u> </EM>, China<br></li>
+              <li> <stronghuge> Invited by<EM>Institute of Artificial Intelligence, <u>Xiamen University</u></EM>, China<br></li>
             <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/" target=“_blank”>the National AI Stragtegy 2.0</a>"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore<br></li>
               <li> <stronghuge><STRONG>"Skeleton Prototype Contrastive Learning with Multi-Level Graph Relation Modeling for Unsupervised Person Re-Identification"</STRONG>, 
                               Invited by <EM>International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</EM>.</stronghuge><br></li>
