--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div id="content">
   <div class="container">
 <div class="intro-container">
-<img class="intro-image no-print" src="./images/me.png" width="240" height="280" alt="Picture of me.">
+<img class="intro-image no-print" src="./images/Me_new.jpg" width="280" height="280" alt="Picture of me.">
 <section id="wenjie-yin" class="intro-text">
 <h1>Haocong Rao</h1>
     <p><strong>PhD, AISG PhD Fellow</strong></p>
@@ -738,4 +738,5 @@
 <script src="./js/scripts.js"></script>
 <!-- <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
 </body>
+
 </html>
