--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div id="content">
   <div class="container">
 <div class="intro-container">
-<img class="intro-image no-print" src="./images/Me_3_4_1m.jpg" width="210" height="280" alt="Picture of me.">
+<img class="intro-image no-print" src="./images/Me_3_4.png" width="210" height="280" alt="Picture of me.">
 <section id="wenjie-yin" class="intro-text">
 <h1>Haocong Rao</h1>
     <p><strong>PhD, AISG PhD Fellow</strong></p>
@@ -740,4 +740,5 @@
 </body>
 
 </html>
+
 
