--- a/index.html
+++ b/index.html
@@ -114,9 +114,15 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
+          <li> <strongsmall>[2025/09]</strongsmall> &nbsp;&nbsp;<smalll>Serving as a Consultant of
+               China-Singapore (Jinan-NTU) Green Technology Research Institute (GreenTRI).
+         </smalll><br></li>
+         <li> <strongsmall>[2025/08]</strongsmall> &nbsp;&nbsp;<smalll>Serving as the PI of
+              an Industry Project. </EM>
+         </smalll><br></li>
            <li> <strongsmall>[2025/08]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Signal Processing Letters</u> [IF: 3.9]</em>!</smalll><br></li>
-          <li> <strongsmall>[2025/06]</strongsmall> &nbsp;&nbsp;<smalll>We are organizing
-              <a href="http://www.cloudcom2025.org/cfp">The 16th IEEE International Conference on Cloud Computing Technology and Science </a> @<EM>IEEE CloudCom 2025</EM> (conjunction with <EM>IEEE Transactions on Cloud Computing & The Journal of Cloud Computing by Springer</EM>), now calling for papers!
+          <li> <strongsmall>[2025/06]</strongsmall> &nbsp;&nbsp;<smalll>Serving as Publication Chair of
+              <a href="http://www.cloudcom2025.org/cfp"> The 16th IEEE International Conference on Cloud Computing Technology and Science </a> @<EM>IEEE CloudCom 2025</EM> (conjunction with <EM>IEEE Transactions on Cloud Computing & The Journal of Cloud Computing by Springer</EM>), now calling for papers!
          </smalll><br></li>
           <li> <strongsmall>[2025/02]</strongsmall> &nbsp;&nbsp;<smalll>Our survey paper "Recognizing Identities From Human Skeletons: A Survey on 3D Skeleton Based Person Re-Identification" is updated and released!</smalll><br></li>
           <li> <strongsmall>[2025/01]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper  "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is accepted by <em><u>Neurocomputing</u> [IF: 5.5]</em>!</smalll><br></li>
