--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
+          <li> <strongsmall>[2025/09]</strongsmall> &nbsp;&nbsp;<smalll>We are organizing the
+              <EM><a href=" https://aaai-aiaa-2026.com/" target=“_blank”>The 1st AI for Healthy Aging and Longevity Workshop</a></EM>,
+           conjunction with
+              <EM><a href="https://aaai.org/conference/aaai/aaai-26/" target=“_blank”>AAAI 2026</a></EM>, now calling for papers!
+         </smalll><br></li>
           <li> <strongsmall>[2025/09]</strongsmall> &nbsp;&nbsp;<smalll>Serving as a Consultant of
                China-Singapore (Jinan-NTU) Green Technology Research Institute (GreenTRI).
          </smalll><br></li>
@@ -535,15 +540,17 @@
       <p>
       </p>
       <li> <STRONG>Organizing Committee (Publication Chair)</STRONG> of <a href="http://www.cloudcom2025.org/index">the 16th IEEE International Conference on Cloud Computing Technology and Science </a> @<EM>IEEE CloudCom 2025 </EM><br></li>
-      <li> <STRONG>Program Committee (PC) Member </STRONG> of <EM>IJCAI</EM> 2025, <EM>IJCAI</EM> 2024, <EM>IJCAI</EM> 2023, <EM>IJCAI</EM> 2022 <br></li>
+      <li> <STRONG>Program Committee (PC) Member </STRONG> of <EM>IJCAI</EM>, <EM>AAAI</EM> <br></li>
       <li> Co-Organizer/Cooperator and PC Member of
-          <a href="https://ijcai-aiaa-2024.org/">the 4th AI for Ageless Aging Workshop</a> @<EM>IJCAI 2024</EM><br></li>
+          <a href="https://aaai-aiaa-2026.com/">The 1st AI for Healthy Aging and Longevity Workshop</a> @<EM>AAAI 2026</EM><br></li>
       <li> Co-Organizer/Cooperator and PC Member of
-          <a href="https://zxjwudi.github.io/aiaa2023.github.io/">the 3rd AI for Ageless Aging Workshop</a> @<EM>IJCAI 2023</EM><br></li>
+          The 4th AI for Ageless Aging Workshop @<EM>IJCAI 2024</EM><br></li>
+      <li> Co-Organizer/Cooperator and PC Member of
+          <a href="https://zxjwudi.github.io/aiaa2023.github.io/">The 3rd AI for Ageless Aging Workshop</a> @<EM>IJCAI 2023</EM><br></li>
       <li> Organizing Team Member of
-          <a href="http://iccse2023.crowdscience.org/">the 6th International Conference on Crowd Science and Engineering</a> @<EM>ICCSE 2023</EM><br></li>
+          <a href="http://iccse2023.crowdscience.org/">The 6th International Conference on Crowd Science and Engineering</a> @<EM>ICCSE 2023</EM><br></li>
       <li> Co-Host, Co-Organizer/Cooperator, and PC Member of
-          <a href="https://zxjwudi.github.io/aif2022.github.io/">the 2nd AI for Cognitive and Physical Frailty Seminar</a> @<EM>IJCAI 2022</EM><br></li>
+          <a href="https://zxjwudi.github.io/aif2022.github.io/">The 2nd AI for Cognitive and Physical Frailty Seminar</a> @<EM>IJCAI 2022</EM><br></li>
           <br>
           <li> Nature Communications, Reviewer </li>
            <li> IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), Reviewer </li>
